# confucius

./: .gitignore  README.rst  confucius.py  pyproject.toml  setup.py
