[tool.poetry]
name = "confucius"
version = "1.0.3"
description = "An easy way to provide environ backed config in your projects."
authors = ["Curtis Maloney <curtis@tinbrain.net>"]
license = "MIT"
homepage = "https://github.com/funkybob/confucius"
readme = "README.rst"
classifiers = [
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
